fix overflow-x

--- a/style.scss
+++ b/style.scss
@@ -6,9 +6,43 @@ $viewDuration: 600ms;
   body {
     color: #eee;
     background-color: black;
-    font-family: 'Cormorant Garamond', serif;
+    font-family: 'Cormorant Garamond', cursive, serif;
     transition: background-color $viewDuration;
   }
+}
+
+.container {
+  overflow-x: hidden;
+  position: absolute;
+  height: 100vh;
+  width: 100vw;
+  .bar {
+    background-color: white;
+    position: absolute;
+    width: 10px;
+    height: 100vh;
+    left: 50%;
+    top: 0%;
+    z-index: 1;
+    opacity: 0;
+    transition: opacity $viewDuration;
+  }
+  .bar-1 {
+    transform: skew(-60deg, 0deg);
+  }
+  .bar-2 {
+    transform: skew(60deg, 0deg);
+  }
+}
+
+.text {
+  font-size: 7vw;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  z-index: 1;
+  word-break: keep-all;
 }
 
 .btn {
@@ -23,50 +57,18 @@ $viewDuration: 600ms;
   background-color: gold;
 }
 
-.bar {
-  background-color: white;
-  position: absolute;
-  width: 10px;
-  height: 100vh;
-  left: 50%;
-  top: 0%;
-  z-index: 1;
-  opacity: 0;
-  transition: opacity $viewDuration;
-}
-.bar-1 {
-  transform: skew(-60deg, 0deg);
-}
-.bar-2 {
-  transform: skew(60deg, 0deg);
-}
-
 .wrapper {
   display: flex;
   justify-content: center;
-}
-
-.text {
-  font-size: 7vw;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  z-index: 1;
-  word-break: keep-all;
-}
-
-.box {
-  // border: 1px solid red;
-  // height: 30rem;
-  // width: 30rem;
-  height: 50vh;
-  width: 50vh;
-  img {
-    width: 100%;
-    height: 100%;
-    object-fit: contain;
-    opacity: 0;
-    transition: opacity 500ms;
-  } 
+  .box {
+    height: 50vh;
+    width: 50vh;
+    img {
+      width: 100%;
+      height: 100%;
+      object-fit: contain;
+      opacity: 0;
+      transition: opacity 500ms;
+    } 
+  }
 }
